syntax = "proto3";

option go_package = "lab/lider";

package sendPlaysLJ;

message NumPasosReq{
    int64 PlayMsg = 1;
}

message NumPasosResp{
    int64 stateMsg = 1;
}

service SendPasosService{
    rpc SendPasos(NumPasosReq) returns (NumPasosResp);
}